feat: llm api integration
